--- a/photo.html
+++ b/photo.html
@@ -98,7 +98,7 @@
             <input type="range" class="photo__controls-range">
           </div>
           <button class="btn" type="submit">Запостить</button>
-          <button class="btn btn--cancel">Отмена</button>
+          <button class="btn btn--cancel" type="reset">Отмена</button>
         </div>
       </form>
     </section>
